<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>game</groupId>
    <artifactId>chess-like-game</artifactId>
    <version>1.0.0</version>

    <properties>

        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>

        <maven.compiler.release>
            26
        </maven.compiler.release>

        <javafx.version>
            26
        </javafx.version>

    </properties>

    <dependencies>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

    </dependencies>

    <build>

        <plugins>

            <!-- Java compiler -->
            <plugin>

                <groupId>
                    org.apache.maven.plugins
                </groupId>

                <artifactId>
                    maven-compiler-plugin
                </artifactId>

                <version>
                    3.14.0
                </version>

                <configuration>

                    <release>
                        26
                    </release>

                </configuration>

            </plugin>


            <!-- JavaFX development runner -->
            <plugin>

                <groupId>
                    org.openjfx
                </groupId>

                <artifactId>
                    javafx-maven-plugin
                </artifactId>

                <version>
                    0.0.8
                </version>

                <configuration>

                    <mainClass>
                        game.Main
                    </mainClass>

                    <options>

                        <option>
                            --enable-native-access=javafx.graphics
                        </option>

                    </options>

                </configuration>

            </plugin>


            <!-- Copy runtime dependencies -->
            <plugin>

                <groupId>
                    org.apache.maven.plugins
                </groupId>

                <artifactId>
                    maven-dependency-plugin
                </artifactId>

                <version>
                    3.8.1
                </version>

                <executions>

                    <execution>

                        <id>
                            copy-dependencies
                        </id>

                        <phase>
                            package
                        </phase>

                        <goals>

                            <goal>
                                copy-dependencies
                            </goal>

                        </goals>

                        <configuration>

                            <outputDirectory>
                                ${project.build.directory}/lib
                            </outputDirectory>

                            <includeScope>
                                runtime
                            </includeScope>

                        </configuration>

                    </execution>

                </executions>

            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                
                <artifactId>javafx-maven-plugin</artifactId>
                
                <version>0.0.8</version>

                <configuration>

                    <mainClass>
                        game.Main
                    </mainClass>

                    <launcher>
                        chess-like-game=game.Main
                    </launcher>

                    <options>
                        <option>
                            --enable-native-access=javafx.graphics
                        </option>
                    </options>

                </configuration>
            </plugin>

        </plugins>

    </build>

</project>